<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="androidLargeFourVM" type="com.ubaysapplication.app.modules.androidlargefour.data.viewmodel.AndroidLargeFourVM"/>
    </data>
    <FrameLayout android:id="@+id/frameAndroidLarge"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumncomputer"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar android:gravity="start"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:contentInsetStart="0dp" style="@style/groupStyleindigo_100">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowcomputer"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_19pxv"
                    android:layout_marginEnd="@dimen/_37pxh"
                    android:layout_marginStart="@dimen/_26pxh"
                    android:layout_marginTop="@dimen/_41pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageComputer"
                        android:layout_height="@dimen/_23pxh"
                        android:layout_marginBottom="@dimen/_5pxv"
                        android:layout_marginTop="@dimen/_6pxv"
                        android:layout_width="@dimen/_35pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_computer"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_computer"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtWeburl"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_6pxv"
                        android:layout_marginStart="@dimen/_7pxh"
                        android:layout_marginTop="@dimen/_8pxv"
                        android:layout_weight="0.35"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{androidLargeFourVM.androidLargeFourModel.txtWeburl}"
                        style="@style/txtMontserratromanextrabold15" tools:text="@string/lbl_levelup_id"/>
                    <FrameLayout android:id="@+id/frameStack"
                        android:layout_height="@dimen/_34pxv"
                        android:layout_marginStart="@dimen/_22pxh"
                        android:layout_width="@dimen/_139pxh" style="@style/groupStylewhite_A700cornerRadius">
                        <ImageView android:id="@+id/imageImageFive"
                            android:layout_gravity="end"
                            android:layout_height="@dimen/_26pxh"
                            android:layout_marginBottom="@dimen/_4pxv"
                            android:layout_marginEnd="@dimen/_5pxh"
                            android:layout_marginStart="@dimen/_10pxh"
                            android:layout_marginTop="@dimen/_4pxv"
                            android:layout_width="@dimen/_36pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_image5"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_image5"/>
                    </FrameLayout>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnellipseone"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_37pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_3">
                <FrameLayout android:id="@+id/frameStackellipseone"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_24pxv"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_13pxh" android:layout_width="@dimen/_27pxh">
                    <View
                        android:background="@drawable/rectangle_bg_white_a700_radius_13_5"
                        android:id="@+id/viewEllipseOne"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_24pxh" android:layout_width="@dimen/_27pxh"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtOne"
                        android:layout_gravity="bottom|start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginStart="@dimen/_9pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{androidLargeFourVM.androidLargeFourModel.txtOne}"
                        style="@style/txtInterextrabold12" tools:text="@string/lbl_1"/>
                </FrameLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtUSERID"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{androidLargeFourVM.androidLargeFourModel.txtUSERID}"
                    style="@style/txtIntersemibold12" tools:text="@string/lbl_user_id"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_gray_401_radius_5"
                    android:ellipsize="end"
                    android:id="@+id/etRectangleThirtySeven"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_18pxv"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@={androidLargeFourVM.androidLargeFourModel.etRectangleThirtySevenValue}"
                    style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnellipseoneOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_65pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_3">
                <FrameLayout android:id="@+id/frameStackellipseoneOne"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_24pxv"
                    android:layout_marginEnd="@dimen/_19pxh"
                    android:layout_marginStart="@dimen/_19pxh" android:layout_width="@dimen/_27pxh">
                    <View
                        android:background="@drawable/rectangle_bg_white_a700_radius_13_5"
                        android:id="@+id/viewEllipseOneOne"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_24pxh" android:layout_width="@dimen/_27pxh"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTwo"
                        android:layout_gravity="bottom|center"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_2pxv"
                        android:layout_marginEnd="@dimen/_9pxh"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{androidLargeFourVM.androidLargeFourModel.txtTwo}"
                        style="@style/txtInterextrabold12" tools:text="@string/lbl_2"/>
                </FrameLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:gravity="center_horizontal"
                    android:id="@+id/recyclerGriduccounter"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_29pxv"
                    android:layout_marginEnd="@dimen/_19pxh"
                    android:layout_marginStart="@dimen/_19pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="4" itemSpace="@{@dimen/_13pxh}"
                    tools:itemCount="6" tools:listitem="@layout/row_griduccounter"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSelanjutnya"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_29pxv"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_36pxv"
                android:layout_width="@dimen/_206pxh"
                android:paddingBottom="@dimen/_7pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_7pxv"
                android:singleLine="true"
                android:text="@string/lbl_selanjutnya"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_2" tools:text="@string/lbl_selanjutnya"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowmenu"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_67pxh"
                android:layout_marginStart="@dimen/_67pxh"
                android:layout_marginTop="@dimen/_189pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageMenu"
                    android:layout_height="@dimen/_10pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="@dimen/_15pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_menu"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_menu"/>
                <ImageView android:id="@+id/imageRefresh"
                    android:layout_height="@dimen/_17pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_87pxh"
                    android:layout_width="@dimen/_13pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_refresh"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_refresh"/>
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_18pxh"
                    android:layout_marginStart="@dimen/_85pxh"
                    android:layout_width="@dimen/_9pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
